client/src/scss/pages/_displayArticles.scss
.display-article {
  flex: 1;
  height: calc(100vh - #{$main-header-height});
  overflow: auto;

  .back {
    text-align: left;
    &__button {
      color: $primary-color;
      font-size: $mid-font-size;
      border: 0
    }
    .icon{
      vertical-align: text-bottom;
    }
  }

  &__header {
    padding: 14px 10px;
    background: $dark-background-color;
    text-align: right;

    .bookmark {
      color: $primary-color-light;
      cursor: pointer;
      display: inline-block;

      &.active {
        color: $primary-color;
      }
    }

    .collection {
      color: $primary-color-light;
      cursor: pointer;
      display: inline-block;
      margin-right: 14px;
    }

    .icon {
      font-size: 1.5rem;
      vertical-align: sub;
      margin-right: 4px;
    }
  }

  .article {
    padding: 2rem;

    &__title {
      font-size: 2rem;
      color: $secondary-color;
    }

    &__details {
      color: $primary-color-light;
      margin-bottom: 2rem;
      font-size: 0.8rem;
    }

    &__desc {
      line-height: 1.5rem;

      img {
        display: block;
        margin: 1rem auto;
      }

      a {
        color: $secondary-color;
      }
    }

    &__images {
      text-align: center;
      img {
        margin: 1rem;
        max-width: 100%;
      }
    }
  }
}

